@@ -1,6 +1,7 @@
 package com.kastrakomnen.hmessenger.model;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class SetBuilder {
@@ -9,35 +10,61 @@ public class SetBuilder {
     private static final Formation box_cw90;
     private static final Formation box_cw180;
     private static final Formation box_cw270;
+    private static final ArrayList<Integer> box_cw0_brick_indexer;
+    private static final ArrayList<Integer> box_cw90_brick_indexer;
+    private static final ArrayList<Integer> box_cw180_brick_indexer;
+    private static final ArrayList<Integer> box_cw270_brick_indexer;
 
     private static final Formation l_cw0;
     private static final Formation l_cw90;
     private static final Formation l_cw180;
     private static final Formation l_cw270;
+    private static final ArrayList<Integer> l_cw0_brick_indexer;
+    private static final ArrayList<Integer> l_cw90_brick_indexer;
+    private static final ArrayList<Integer> l_cw180_brick_indexer;
+    private static final ArrayList<Integer> l_cw270_brick_indexer;
 
     private static final Formation t_cw0;
     private static final Formation t_cw90;
     private static final Formation t_cw180;
     private static final Formation t_cw270;
-
+    private static final ArrayList<Integer> t_cw0_brick_indexer;
+    private static final ArrayList<Integer> t_cw90_brick_indexer;
+    private static final ArrayList<Integer> t_cw180_brick_indexer;
+    private static final ArrayList<Integer> t_cw270_brick_indexer;
     private static final Formation line_cw0;
     private static final Formation line_cw90;
     private static final Formation line_cw180;
     private static final Formation line_cw270;
+    private static final ArrayList<Integer> line_cw0_brick_indexer;
+    private static final ArrayList<Integer> line_cw90_brick_indexer;
+    private static final ArrayList<Integer> line_cw180_brick_indexer;
+    private static final ArrayList<Integer> line_cw270_brick_indexer;
 
     private static final Formation z_cw0;
     private static final Formation z_cw90;
     private static final Formation z_cw180;
     private static final Formation z_cw270;
+    private static final ArrayList<Integer> z_cw0_brick_indexer;
+    private static final ArrayList<Integer> z_cw90_brick_indexer;
+    private static final ArrayList<Integer> z_cw180_brick_indexer;
+    private static final ArrayList<Integer> z_cw270_brick_indexer;
 
     private static final Formation rl_cw0;
     private static final Formation rl_cw90;
     private static final Formation rl_cw180;
     private static final Formation rl_cw270;
+    private static final ArrayList<Integer> rl_cw0_brick_indexer;
+    private static final ArrayList<Integer> rl_cw90_brick_indexer;
+    private static final ArrayList<Integer> rl_cw180_brick_indexer;
+    private static final ArrayList<Integer> rl_cw270_brick_indexer;
 
     static {
+
+        /* BOX INIT */
+
         box_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(0, 0),
                         new RelativePosition(1, 0),
                         new RelativePosition(0, 1),
@@ -49,8 +76,15 @@ public class SetBuilder {
         box_cw180 = FormationTransformer.transform(RotateType.CW180, box_cw0);
         box_cw270 = FormationTransformer.transform(RotateType.CW270, box_cw0);
 
+        box_cw0_brick_indexer = new ArrayList<>(Arrays.asList(0, 1, 2, 3));
+        box_cw90_brick_indexer = new ArrayList<>(Arrays.asList(2, 0, 3, 1));
+        box_cw180_brick_indexer = new ArrayList<>(Arrays.asList(3, 2, 1, 0));
+        box_cw270_brick_indexer = new ArrayList<>(Arrays.asList(1, 3, 0, 2));
+
+        /* L INIT */
+
         l_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(0, -1),
                         new RelativePosition(0, 0),
                         new RelativePosition(0, 1),
@@ -62,8 +96,26 @@ public class SetBuilder {
         l_cw180 = FormationTransformer.transform(RotateType.CW180, l_cw0);
         l_cw270 = FormationTransformer.transform(RotateType.CW270, l_cw0);
 
+        l_cw0_brick_indexer = new ArrayList<Integer>(
+                Arrays.asList(0, 1, 2, 3)
+                );
+
+        l_cw90_brick_indexer = new ArrayList<>(
+                Arrays.asList(2, 1, 0, 3)
+                );
+
+        l_cw180_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+                );
+
+        l_cw270_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 0, 1, 2)
+                );
+
+        /* T INIT */
+
         t_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(-1, 0),
                         new RelativePosition(0, 0),
                         new RelativePosition(1, 0),
@@ -75,8 +127,26 @@ public class SetBuilder {
         t_cw180 = FormationTransformer.transform(RotateType.CW180, t_cw0);
         t_cw270 = FormationTransformer.transform(RotateType.CW270, t_cw0);
 
+        t_cw0_brick_indexer = new ArrayList<Integer>(
+                Arrays.asList(0, 1, 2, 3)
+        );
+
+        t_cw90_brick_indexer = new ArrayList<>(
+                Arrays.asList(0, 3, 1, 2)
+        );
+
+        t_cw180_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+        );
+
+        t_cw270_brick_indexer = new ArrayList<>(
+                Arrays.asList(2, 1, 3, 0)
+        );
+
+        /* LINE INIT */
+
         line_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(-1, 0),
                         new RelativePosition(0, 0),
                         new RelativePosition(1, 0),
@@ -88,8 +158,26 @@ public class SetBuilder {
         line_cw180 = FormationTransformer.transform(RotateType.CW180, line_cw0);
         line_cw270 = FormationTransformer.transform(RotateType.CW270, line_cw0);
 
+        line_cw0_brick_indexer = new ArrayList<Integer>(
+                Arrays.asList(0, 1, 2, 3)
+        );
+
+        line_cw90_brick_indexer = new ArrayList<>(
+                Arrays.asList(0, 1, 2, 3)
+        );
+
+        line_cw180_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+        );
+
+        line_cw270_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+        );
+
+        /* Z INIT */
+
         z_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(-1, 0),
                         new RelativePosition(0, 0),
                         new RelativePosition(0, 1),
@@ -101,8 +189,26 @@ public class SetBuilder {
         z_cw180 = FormationTransformer.transform(RotateType.CW180, z_cw0);
         z_cw270 = FormationTransformer.transform(RotateType.CW270, z_cw0);
 
+        z_cw0_brick_indexer = new ArrayList<Integer>(
+                Arrays.asList(0, 1, 2, 3)
+        );
+
+        z_cw90_brick_indexer = new ArrayList<>(
+                Arrays.asList(0, 2, 1, 3)
+        );
+
+        z_cw180_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+        );
+
+        z_cw270_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 1, 2, 0)
+        );
+
+        /* RL INIT */
+
         rl_cw0 = new Formation(
-                new ArrayList<>(List.of(
+                new ArrayList<>(Arrays.asList(
                         new RelativePosition(0, -1),
                         new RelativePosition(0, 0),
                         new RelativePosition(-1, 1),
@@ -113,6 +219,23 @@ public class SetBuilder {
         rl_cw90 = FormationTransformer.transform(RotateType.CW90, rl_cw0);
         rl_cw180 = FormationTransformer.transform(RotateType.CW180, rl_cw0);
         rl_cw270 = FormationTransformer.transform(RotateType.CW270, rl_cw0);
+
+        rl_cw0_brick_indexer = new ArrayList<Integer>(
+                Arrays.asList(0, 1, 2, 3)
+        );
+
+        rl_cw90_brick_indexer = new ArrayList<>(
+                Arrays.asList(2, 3, 1, 0)
+        );
+
+        rl_cw180_brick_indexer = new ArrayList<>(
+                Arrays.asList(3, 2, 1, 0)
+        );
+
+        rl_cw270_brick_indexer = new ArrayList<>(
+                Arrays.asList(0, 1, 3, 2)
+        );
+
     }
 
     public static Set build(FormationType formationType){
@@ -127,6 +250,12 @@ public class SetBuilder {
                 set.insert(box_cw90);
                 set.insert(box_cw180);
                 set.insert(box_cw270);
+
+                set.insert(box_cw0_brick_indexer);
+                set.insert(box_cw90_brick_indexer);
+                set.insert(box_cw180_brick_indexer);
+                set.insert(box_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -137,6 +266,10 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(box_cw180);
                 set.insert(box_cw270);
+                set.insert(box_cw0_brick_indexer);
+                set.insert(box_cw90_brick_indexer);
+                set.insert(box_cw180_brick_indexer);
+                set.insert(box_cw270_brick_indexer);
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -147,6 +280,12 @@ public class SetBuilder {
                 set.insert(box_cw180);
                 set.setDefaultFormation();
                 set.insert(box_cw270);
+
+                set.insert(box_cw0_brick_indexer);
+                set.insert(box_cw90_brick_indexer);
+                set.insert(box_cw180_brick_indexer);
+                set.insert(box_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -157,6 +296,12 @@ public class SetBuilder {
                 set.insert(box_cw180);
                 set.insert(box_cw270);
                 set.setDefaultFormation();
+
+                set.insert(box_cw0_brick_indexer);
+                set.insert(box_cw90_brick_indexer);
+                set.insert(box_cw180_brick_indexer);
+                set.insert(box_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -167,6 +312,12 @@ public class SetBuilder {
                 set.insert(l_cw90);
                 set.insert(l_cw180);
                 set.insert(l_cw270);
+
+                set.insert(l_cw0_brick_indexer);
+                set.insert(l_cw90_brick_indexer);
+                set.insert(l_cw180_brick_indexer);
+                set.insert(l_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -177,6 +328,12 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(l_cw180);
                 set.insert(l_cw270);
+
+                set.insert(l_cw0_brick_indexer);
+                set.insert(l_cw90_brick_indexer);
+                set.insert(l_cw180_brick_indexer);
+                set.insert(l_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -187,6 +344,12 @@ public class SetBuilder {
                 set.insert(l_cw180);
                 set.setDefaultFormation();
                 set.insert(l_cw270);
+
+                set.insert(l_cw0_brick_indexer);
+                set.insert(l_cw90_brick_indexer);
+                set.insert(l_cw180_brick_indexer);
+                set.insert(l_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -197,6 +360,12 @@ public class SetBuilder {
                 set.insert(l_cw180);
                 set.insert(l_cw270);
                 set.setDefaultFormation();
+
+                set.insert(l_cw0_brick_indexer);
+                set.insert(l_cw90_brick_indexer);
+                set.insert(l_cw180_brick_indexer);
+                set.insert(l_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -207,6 +376,12 @@ public class SetBuilder {
                 set.insert(t_cw90);
                 set.insert(t_cw180);
                 set.insert(t_cw270);
+
+                set.insert(t_cw0_brick_indexer);
+                set.insert(t_cw90_brick_indexer);
+                set.insert(t_cw180_brick_indexer);
+                set.insert(t_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -217,6 +392,12 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(t_cw180);
                 set.insert(t_cw270);
+
+                set.insert(t_cw0_brick_indexer);
+                set.insert(t_cw90_brick_indexer);
+                set.insert(t_cw180_brick_indexer);
+                set.insert(t_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -227,6 +408,12 @@ public class SetBuilder {
                 set.insert(t_cw180);
                 set.setDefaultFormation();
                 set.insert(t_cw270);
+
+                set.insert(t_cw0_brick_indexer);
+                set.insert(t_cw90_brick_indexer);
+                set.insert(t_cw180_brick_indexer);
+                set.insert(t_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -237,6 +424,12 @@ public class SetBuilder {
                 set.insert(t_cw180);
                 set.insert(t_cw270);
                 set.setDefaultFormation();
+
+                set.insert(t_cw0_brick_indexer);
+                set.insert(t_cw90_brick_indexer);
+                set.insert(t_cw180_brick_indexer);
+                set.insert(t_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -247,6 +440,12 @@ public class SetBuilder {
                 set.insert(line_cw90);
                 set.insert(line_cw180);
                 set.insert(line_cw270);
+
+                set.insert(line_cw0_brick_indexer);
+                set.insert(line_cw90_brick_indexer);
+                set.insert(line_cw180_brick_indexer);
+                set.insert(line_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -257,6 +456,12 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(line_cw180);
                 set.insert(line_cw270);
+
+                set.insert(line_cw0_brick_indexer);
+                set.insert(line_cw90_brick_indexer);
+                set.insert(line_cw180_brick_indexer);
+                set.insert(line_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -267,6 +472,12 @@ public class SetBuilder {
                 set.insert(line_cw180);
                 set.setDefaultFormation();
                 set.insert(line_cw270);
+
+                set.insert(line_cw0_brick_indexer);
+                set.insert(line_cw90_brick_indexer);
+                set.insert(line_cw180_brick_indexer);
+                set.insert(line_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -277,6 +488,12 @@ public class SetBuilder {
                 set.insert(line_cw180);
                 set.insert(line_cw270);
                 set.setDefaultFormation();
+
+                set.insert(line_cw0_brick_indexer);
+                set.insert(line_cw90_brick_indexer);
+                set.insert(line_cw180_brick_indexer);
+                set.insert(line_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -287,6 +504,12 @@ public class SetBuilder {
                 set.insert(z_cw90);
                 set.insert(z_cw180);
                 set.insert(z_cw270);
+
+                set.insert(z_cw0_brick_indexer);
+                set.insert(z_cw90_brick_indexer);
+                set.insert(z_cw180_brick_indexer);
+                set.insert(z_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -297,6 +520,12 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(z_cw180);
                 set.insert(z_cw270);
+
+                set.insert(z_cw0_brick_indexer);
+                set.insert(z_cw90_brick_indexer);
+                set.insert(z_cw180_brick_indexer);
+                set.insert(z_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -307,6 +536,12 @@ public class SetBuilder {
                 set.insert(z_cw180);
                 set.setDefaultFormation();
                 set.insert(z_cw270);
+
+                set.insert(z_cw0_brick_indexer);
+                set.insert(z_cw90_brick_indexer);
+                set.insert(z_cw180_brick_indexer);
+                set.insert(z_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -317,6 +552,12 @@ public class SetBuilder {
                 set.insert(z_cw180);
                 set.insert(z_cw270);
                 set.setDefaultFormation();
+
+                set.insert(z_cw0_brick_indexer);
+                set.insert(z_cw90_brick_indexer);
+                set.insert(z_cw180_brick_indexer);
+                set.insert(z_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -327,6 +568,12 @@ public class SetBuilder {
                 set.insert(rl_cw90);
                 set.insert(rl_cw180);
                 set.insert(rl_cw270);
+
+                set.insert(rl_cw0_brick_indexer);
+                set.insert(rl_cw90_brick_indexer);
+                set.insert(rl_cw180_brick_indexer);
+                set.insert(rl_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -337,6 +584,12 @@ public class SetBuilder {
                 set.setDefaultFormation();
                 set.insert(rl_cw180);
                 set.insert(rl_cw270);
+
+                set.insert(rl_cw0_brick_indexer);
+                set.insert(rl_cw90_brick_indexer);
+                set.insert(rl_cw180_brick_indexer);
+                set.insert(rl_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -347,6 +600,12 @@ public class SetBuilder {
                 set.insert(rl_cw180);
                 set.setDefaultFormation();
                 set.insert(rl_cw270);
+
+                set.insert(rl_cw0_brick_indexer);
+                set.insert(rl_cw90_brick_indexer);
+                set.insert(rl_cw180_brick_indexer);
+                set.insert(rl_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
@@ -357,6 +616,12 @@ public class SetBuilder {
                 set.insert(rl_cw180);
                 set.insert(rl_cw270);
                 set.setDefaultFormation();
+
+                set.insert(rl_cw0_brick_indexer);
+                set.insert(rl_cw90_brick_indexer);
+                set.insert(rl_cw180_brick_indexer);
+                set.insert(rl_cw270_brick_indexer);
+
                 for (int i = 0; i < 4; i++) {
                     set.insert(new Brick());
                 }
